[tool.poetry]
name = "metadata_audit"
version = "0.1.0"
description = "A tool for inspecting metadata using toml, Pandera and Postgres."
authors = ["mikevatd3 <mike@datadrivendetroit.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <=3.13"
tomli = "^2.0.1"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.31"
pandas = "^2.2.2"
pandera = "^0.21.0"
pyarrow = "^17.0.0"
geopandas = "^1.0.1"
geoalchemy2 = "^0.15.2"
tabulate = "^0.9.0"
dvc = "^3.56.0"
pydantic = "^2.10.3"
pygit2 = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
